Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,29 +1,45 @@
 ---
-name: 想法建议
-about: 可加入的新内容，或是对现有内容的新想法。
+name: 问题报告
+about: 如果程序的某一功能出现问题，请向我们报告
 title: ''
-labels: 优化
+labels: 问题
 assignees: ''
 
 ---
 
-> 在您建议之前请确认：**这是否是一个有价值的建议？这是否适用于每一个人？这个想法是否比现在更好？**
-> 如果你认为你的想法满足以上条件，请删除这段文本并继续。
+> 注意，在报告之前请先确认：**你已经清除过浏览器 / CDN 缓存；你没有修改过相关源代码。**
+> 在确定这的确是原项目中的问题之后，请删除这段文本，并继续报告。
 
-**这是一个什么类型的建议？**
+**问题出处：**
 
-增加新内容 / 优化现有内容 / 移除现有内容
+这个问题出在程序的哪一个具体功能？
 
-**现有的效果是怎样的？这造成了怎样的影响？**
+**实际行为描述：**
 
-若某功能需要优化，则描述现有功能的缺陷；若需要加入新内容，则描述没有这一内容带来的不便。
+触发问题后造成了什么效果及影响？
 
-**你想要看到的效果是怎样的？**
+**预期的行为：**
 
-请详细并清除地描述你的想法。
+这个功能应该有怎样的效果和影响？
 
-**你对理想的实现方法有构思吗？**
+**复现步骤：**
 
-如果你有新的想法并有详细的实现方法，请描述，比如应修改的文件；如果没有，请删掉这一项或是留空。
+怎样才能再次触发这个问题？
+
+**配置与环境：**
+
+- 问题页面：（如果有，请提供一个触发此问题的页面链接）
+- PHP 版本：
+- 数据库类型 / 版本：
+- Typecho 版本：
+- 主题版本：（Release 标注的版本号，开发版则写 Dev.）
+- 使用的插件：（所有使用中的的插件，以便判断兼容性问题）
+- 浏览器：（浏览器名称及版本号）
+
+**截图（若有）**
+
+提供一个此问题触发的截图或报错信息。若没有，则留空。
 
 **补充信息：**
+
+提供尽可能多的相关信息。
